--- a/AppTarefas.html
+++ b/AppTarefas.html
@@ -24,5 +24,5 @@
     </div>
 </body>
 <script src="main.js"></script>
-<script src="https://kit.fontawesome.com/98283e91bc.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/.js" crossorigin="anonymous"></script>
 </html>
